<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.categories.CategoriesActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/categories_bar_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner_logo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/categories_userIcon_width"
        android:layout_height="@dimen/match_constraint"
        android:layout_marginStart="@dimen/categories_userIcon_layout_marginStart"
        android:layout_marginTop="@dimen/categories_userIcon_layout_marginTop"
        app:layout_constraintBottom_toBottomOf="@+id/txtUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_user_icon" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/categories_userIcon_layout_marginStart"
        android:text="@string/categories_activity_welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/categories_welcome_text_size"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/categories_userName_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtWelcome"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/categories_userIcon_layout_marginStart"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/categories_search_query_hint" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/categories_userIcon_layout_marginStart"
        android:layout_marginTop="@dimen/categories_rcv_text_layout_marginTopBottom"
        android:text="@string/categories_title"
        android:textColor="@color/black"
        android:textSize="@dimen/categories_text_size"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/categories_divider_height"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvCategories"
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraint"
        android:layout_marginTop="@dimen/categories_rcv_text_layout_marginTopBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:listitem="@layout/cardview_category" />

</androidx.constraintlayout.widget.ConstraintLayout>